fix: fixed the overflow of codeblock

--- a/source/css/_highlight.styl
+++ b/source/css/_highlight.styl
@@ -1,7 +1,7 @@
 .code-block-container
   overflow: hidden
   size(100%, auto)
-  margin: 10px 0
+  margin: 15px 0
   box-sizing: content-box
   border-radius: $border-radius-base
   box-shadow: 0 5px 10px 0 rgb(0, 0, 0, 0.4)
@@ -65,17 +65,15 @@
 
   pre
     overflow-y: hidden
-    overflow-x: auto 
     margin: 0 
     padding: 0.8em
-    white-space: pre-wrap
     transition: all 0.5s
 
   .hljs 
     overflow-x: auto
     display: block
     width: 100%
-    white-space: pre-wrap
+    white-space: pre
     color: #abb2bf
 
   .hljs-comment
